# Market-xG

./: .gitignore  README.md  backlog.md  pyproject.toml
.github/workflows/: ci.yml
docs/architecture/: market_data_contract.md  real_data_strategy.md  sample_market_data.md  scoring_model.md  system_design.md
docs/decision_log/: ADR-001-rule-based-scoring-first.md  ADR-002-sp500-first.md  ADR-003-csv-parquet-before-database.md
docs/product/: asset_analysis_workflow.md  asset_identity_and_symbol_resolution.md  glossary.md  local_checks_and_commit_workflow.md  provider_symbol_live_execution_contract.md  real_market_data_provider_strategy.md  roadmap.md  roadmap_governance.md  sprint_plan.md  vision.md  way_of_working.md
docs/requirements/: business_requirements.md  functional_requirements.md  non_functional_requirements.md
docs/test_strategy/: acceptance_criteria.md  ci_cd.md  definition_of_done.md  qa_risk_register.md  test_strategy.md
docs/tickets/: README.md  template.md
docs/uat/: provider_based_analysis_technical_uat.md  provider_based_analysis_technical_uat_results.md
scripts/: run_tests.sh
src/market_xg/: __init__.py
tests/integration/: test_phase_1_sample_pipeline.py  test_placeholder_pipeline.py
tests/unit/: test_ci_docs.py  test_definition_of_done_docs.py  test_drawdown_indicators.py  test_imports.py  test_indicator_models.py  test_local_checks_workflow_docs.py  test_markdown_report.py  test_market_data_contract_docs.py  test_market_data_validator.py  test_market_xg_score.py  test_momentum_indicators.py  test_moving_average_indicators.py  (+15 more)
(+62 files in other folders)
